Fixed css so images do not overflow outside of the containers. Imgs take up 100% of container they occupy.

--- a/indexflex.css
+++ b/indexflex.css
@@ -93,3 +93,9 @@ footer a{
     width: 50%;
 }
 
+.container-one-half>img{
+    width: 100%;
+}
+
+
+
